# Autarch

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  autarch-mcp  dev  go.mod  go.sum  package.json
autarch-plugin/.claude-plugin/: plugin.json
cmd/autarch/: events.go  main.go  reconcile.go
cmd/autarch-mcp/: main.go
cmd/bigend/: main.go
cmd/coldwine/: main.go
cmd/gurgeh/: main.go
cmd/pollard/: main.go
cmd/praude/: main.go
cmd/tandemonium/: main.go
cmd/testui/: main.go
cmd/vauxhall/: main.go
docs/: ARCHITECTURE.md  COMPOUND_INTEGRATION.md  FLOWS.md  INTEGRATION.md  SCHEMA_VERSIONING.md  architecture-visualizer.html
docs/brainstorms/: 2026-01-26-cursor-style-unified-layout-brainstorm.md  2026-01-28-gurgeh-readonly-spec-api-brainstorm.md  2026-01-28-shared-async-jobs-brainstorm.md
docs/gurgeh/: AGENTS.md  roadmap.md
docs/pollard/: HUNTERS.md
mcp-client/: package.json  pnpm-lock.yaml
mcp-server/: .gitignore  README.md  package.json  pnpm-lock.yaml
pkg/: AGENTS.md
prototypes/: M0_PROGRESS_SUMMARY.md
prototypes/m0-yaml/: Cargo.toml  VALIDATION_RESULTS.md
prototypes/m0-yaml/src/: main.rs
todos/: 001-complete-p2-coordination-doc-updates.md  001-pending-p2-coordination-doc-updates.md  002-complete-p2-signals-broker-wiring.md  003-pending-p2-pollard-intermute-inbox.md  004-complete-p2-coldwine-agent-runner-integration.md  004-pending-p2-coldwine-agent-runner-integration.md  005-pending-p2-unified-ui-grammar-migration.md  006-pending-p2-guardrails-context-timeouts.md  007-ready-p1-coordination-reconciliation-mvp.md
(+592 files in other folders)
