[package]
name = "yaml-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
tempfile = "3.14"
nix = { version = "0.29", features = ["fs"] }
